--- a/todo-app/src/app/components/new-task/new-task.component.html
+++ b/todo-app/src/app/components/new-task/new-task.component.html
@@ -62,9 +62,9 @@
                                         {{schedule}}
                                     </mat-option>
                                 </mat-select>
-                                <mat-error *ngIf="schedule?.hasError('required') && schedule?.pristine">Schedule
+                                <!-- <mat-error *ngIf="schedule?.hasError('required') && schedule?.pristine">Schedule
                                     is required
-                                </mat-error>
+                                </mat-error> -->
                             </mat-form-field>
                         </div>
                     </div>
